// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`portable > children will be wrapped by rp-outlet 1`] = `
<DocumentFragment>
  <rp-preview
    code="foo"
  >
    <div>
      sample with children:
      <rp-outlet>
        <p>
          this is children
        </p>
      </rp-outlet>
    </div>
  </rp-preview>
</DocumentFragment>
`;

exports[`portable > the component will NOT be wrapped by rp-preview when \`disablePreview\` is specified true 1`] = `
<DocumentFragment>
  <div>
    sample
  </div>
</DocumentFragment>
`;

exports[`portable > the component will be wrapped by rp-preview 1`] = `
<DocumentFragment>
  <rp-preview
    code="foo"
  >
    <div>
      sample
    </div>
  </rp-preview>
</DocumentFragment>
`;
